--- a/HISTORY
+++ b/HISTORY
@@ -1,2 +1,5 @@
 1.0  initial version (methods : linsa, morris, sobol, sobol.sal02, fast)
-1.1  correction of a serious bug in morris
+1.1  morris : correction of a bug
+1.2  fast : correction of a bug, suppression of bootstrap
+     fast : 2 new arguments, the frequency set (omega) and the discretization (s)
+     plot.* : correction of a bug (old variable name 'sa')
