--- a/HISTORY
+++ b/HISTORY
@@ -6,3 +6,4 @@
 1.2  quick revision (fixed bug in fast)
 (Developper's note: I had better call these revisions 1.0-1 and 1.0-2... too late !)
 1.3  
+1.3-1 quick revision (fixed bug in plot)
