--- a/inst/doc/sensitivity_appendix.Rnw
+++ b/inst/doc/sensitivity_appendix.Rnw
@@ -8,7 +8,9 @@
 \setlength\parindent{0pt}
 \setlength\parskip{1ex}
 
-\usepackage{gilles_maths}
+%\usepackage{gilles_maths}
+\usepackage{amsmath}
+\usepackage{amssymb}
 
 \begin{document}
 
